--- a/Task_1/TicketReSail/TicketReSail/Views/Admin/Index.cshtml
+++ b/Task_1/TicketReSail/TicketReSail/Views/Admin/Index.cshtml
@@ -1,5 +1,21 @@
-﻿@{
-    ViewData["Title"] = "Admin";
-}
-
-<h1>Index</h1>
+﻿<div class="container">
+    <div class="row">
+        <div class="col-3">
+            <div class="text-center">
+                <div class="btn btn-outline-primary">@Html.ActionLink("Change role", "ChangeRole", "Admin")</div>
+            </div>
+            <div class="text-center">
+                <div class="btn btn-outline-primary">@Html.ActionLink("Create category", "Index", "Category")</div>
+            </div>
+            <div class="text-center">
+                <div class="btn btn-outline-primary">@Html.ActionLink("Create venue", "Index", "Venue")</div>
+            </div>
+            <div class="text-center">
+                <div class="btn btn-outline-primary">@Html.ActionLink("Create city", "Index", "City")</div>
+            </div>
+            <div class="text-center">
+                <div class="btn btn-outline-primary">@Html.ActionLink("Create event", "Index", "Event")</div>
+            </div>
+        </div>
+    </div>
+</div>
