--- a/Task_1/TicketReSail/TicketReSail/Views/Roles/EditRole.cshtml
+++ b/Task_1/TicketReSail/TicketReSail/Views/Roles/EditRole.cshtml
@@ -1,16 +1,16 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @model ChangeRoleViewModel
 
-<h2>Изменение ролей для пользователя @Model.UserLogin</h2>
+<h2>Change role for user @Model.UserLogin</h2>
 
-<form asp-action="Edit" method="post">
+<form asp-action="EditRole" method="post" asp-route-returnUrl-returnurl=@ViewBag.ReturnUrl>
     <input type="hidden" name="userId" value="@Model.UserId" />
     <div class="form-group">
-        @foreach (IdentityRole role in Model.AllRoles)
+        @foreach (var role in Model.AllRoles)
         {
             <input type="checkbox" name="roles" value="@role.Name"
                    @(Model.UserRoles.Contains(role.Name) ? "checked=\"checked\"" : "") />@role.Name <br />
-            }
+        }
     </div>
-    <button type="submit" class="btn btn-primary">Сохранить</button>
+    <button type="submit" class="btn btn-primary">Save</button>
 </form>
