--- a/Task_1/TicketReSail/TicketReSail/Views/Order/WaitingConfirm.cshtml
+++ b/Task_1/TicketReSail/TicketReSail/Views/Order/WaitingConfirm.cshtml
@@ -30,7 +30,7 @@
             <td>$@Ticker.GetPriceByTicketId(orders.TicketId)</td>
             <td>
                 @Html.ActionLink($"{@UserService.GetUserNameById(orders.UserIdBuyer)}", "Index", "User",
-                    new { id = orders.Ticket.UserIdSeller })
+                    new { id = orders.UserIdBuyer })
             </td>
             <td>@orders.Status</td>
             <td>
