--- a/Task_1/TicketReSail/TicketReSail/Views/Category/Index.cshtml
+++ b/Task_1/TicketReSail/TicketReSail/Views/Category/Index.cshtml
@@ -1,28 +1,138 @@
 ﻿@model IEnumerable<TicketReSail.DAL.Model.Category>
+
 @{
     ViewData["Title"] = "Create category";
 }
 
-<a asp-action="CreateCategory">Create category</a>
-
-<table class="table">
-    @foreach (var category in Model)
-    {
-        <tr>
-            <td>@category.Name</td>
-            <td>
-                <form asp-action="DeleteCategory" asp-route-id="@category.Id" method="post">
-                    <button type="submit" class="btn btn-sm btn-primary">Delete</button>
+<div class="container">
+    <div class="row">
+        <div class="col-4">
+            <div>
+                <form name="categoryForm">
+                    <input type="hidden" name="id" value="0" />
+                    <div class="form-group">
+                        <label for="name">Category</label>
+                        <input name="name" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" id="submit" class="btn btn-primary">Create</button>
+                    </div>
                 </form>
-            </td>
-        </tr>
-    }
-</table>
+            </div>
+        </div>
+        <div class="col-8">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+        </div>
+    </div>
+</div>
+
 
 <div>
     <a asp-controller="Admin" asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+<script>
+
+    async function getCategories() {
+        const response = await fetch("/api/v1/categories",
+            {
+                method: "GET",
+                headers: { "Accept": "application/jcon" }
+            });
+        if (response.ok === true) {
+
+            const categories = await response.json();
+            let rows = document.querySelector("tbody");
+            categories.forEach(category => {
+                rows.append(row(category));
+            });
+        }
+    }
+
+    // не понимаю, почему после создания категории удалить я ее могу только после обновления страницы
+    // что я пропустил?
+    async function createCategory(categoryName) {
+        const response = await fetch("/api/v1/categories",
+            {
+                method: "POST",
+                headers: { "Accept": "application/jcon", "Content-Type": "application/json" },
+                body: JSON.stringify({
+                    name: categoryName
+                })
+            });
+        if(response.ok === true) {
+            const category = await response.json();
+            reset();
+            document.querySelector("tbody").append(row(category));
+        }
+    }
+
+    async function deleteCategory(id) {
+        const response = await fetch(`/api/v1/categories/${id}`,
+            {
+                method: "DELETE",
+                headers: { "Accept": "application/jcon" }
+            });
+        if (response.ok === true) {
+            const category = await response.json();
+            document.querySelector(`tr[data-rowid='${category.id}']`).remove();
+        }
+    }
+
+    function reset() {
+        const form = document.forms["categoryForm"];
+        form.reset();
+        form.elements["id"].value = 0;
+    }
+
+
+    function row(category) {
+        const tr = document.createElement("tr");
+        tr.setAttribute("data-rowid", category.id);
+
+        const nameTd = document.createElement("td");
+        nameTd.append(category.name);
+        tr.append(nameTd);
+
+        const linksTd = document.createElement("td");
+
+        const removeLink = document.createElement("a");
+        removeLink.setAttribute("data-id", category.id);
+        removeLink.setAttribute("type", "submit");
+        removeLink.setAttribute("class", "btn btn-sm btn-primary");
+        removeLink.append("Delete");
+        removeLink.addEventListener("click", e => {
+
+            e.preventDefault();
+            deleteCategory(category.id);
+        });
+
+        linksTd.append(removeLink);
+        tr.appendChild(linksTd);
+
+        return tr;
+    }
+
+    // send form
+    document.forms["categoryForm"].addEventListener("submit",
+        e => {
+            e.preventDefault();
+            const form = document.forms["categoryForm"];
+            const id = form.elements["id"].value;
+            const name = form.elements["name"].value;
+            if (id == 0)
+                createCategory(name);
+        });
+
+    getCategories();
+
+</script>
