--- a/Task_1/TicketReSail/TicketReSail/Views/Event/CreateEvent.cshtml
+++ b/Task_1/TicketReSail/TicketReSail/Views/Event/CreateEvent.cshtml
@@ -27,8 +27,18 @@
                 <span asp-validation-for="CategoryId" class="text-danger"></span>
             </div>
             <div>
+                <label asp-for="Cities">City</label>
+                <select onchange="getVenues(this.option[this.selectedIndex].value)" class="form-control">
+                    @foreach (var city in Model.Cities)
+                    {
+                        <option value="@city.Id">@city.Name</option>
+                    }
+                </select>
+                <span asp-validation-for="Cities" class="text-danger"></span>
+            </div>
+            <div>
                 <label asp-for="VenueId">Venue</label>
-                <select asp-for="VenueId" asp-items="ViewBag.Venues" class="form-control"></select>
+                <select class="form-control"></select>
                 <span asp-validation-for="VenueId" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -55,3 +65,29 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+
+<script>
+
+    async function getVenues(cityId) {
+        const response = await fetch(`/api/v1/venues/${cityId}`,
+            {
+                method: "GET",
+                headers: { "Accept": "application/jcon" }
+            });
+        if(response.ok === true) {
+            const venues = await response.json();
+            const option = document.querySelector("select");
+            venues.forEach(venue => {
+                option.append(option1(venue));
+            });
+        }
+    }
+
+    function option1(venue) {
+        const option = document.createElement("option");
+        option.append(venue.name);
+
+        return option;
+    };
+
+</script>
