--- a/Task_1/TicketReSail/TicketReSail/Views/Category/Index.cshtml
+++ b/Task_1/TicketReSail/TicketReSail/Views/Category/Index.cshtml
@@ -1,20 +1,38 @@
-﻿@model IEnumerable<TicketReSail.DAL.Model.Category>
-@{
+﻿@{
     ViewData["Title"] = "Create category";
 }
 
-<a asp-action="CreateCategory">Create category</a>
+<div class="container">
+    <div class="row">
+        <div class="col-4">
+            <div>
+                <form name="categoryForm">
+                    <input type="hidden" name="id" value="0" />
+                    <div class="form-group">
+                        <label for="name">Category</label>
+                        <input name="name" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" id="submit" class="btn btn-primary">Create</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div class="col-8">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+        </div>
+    </div>
+</div>
 
-<table class="table">
-    <thead>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-    </thead>
-    <tbody></tbody>
-</table>
 
 <div>
     <a asp-controller="Admin" asp-action="Index">Back to List</a>
@@ -38,6 +56,24 @@
         }
     }
 
+    // не понимаю, почему после создания категории удалить я ее могу только после обновления страницы
+    // что я пропустил?
+    async function createCategory(categoryName) {
+        const response = await fetch("/api/v1/categories",
+            {
+                method: "POST",
+                headers: { "Accept": "application/jcon", "Content-Type": "application/json" },
+                body: JSON.stringify({
+                    name: categoryName
+                })
+            });
+        if (response.ok === true) {
+            const category = await response.json();
+            reset();
+            document.querySelector("tbody").append(row(category));
+        }
+    }
+
     async function deleteCategory(id) {
         const response = await fetch(`/api/v1/categories/${id}`,
             {
@@ -49,6 +85,13 @@
             document.querySelector(`tr[data-rowid='${category.id}']`).remove();
         }
     }
+
+    function reset() {
+        const form = document.forms["categoryForm"];
+        form.reset();
+        form.elements["id"].value = 0;
+    }
+
 
     function row(category) {
         const tr = document.createElement("tr");
@@ -76,6 +119,17 @@
 
         return tr;
     }
+
+    // send form
+    document.forms["categoryForm"].addEventListener("submit",
+        e => {
+            e.preventDefault();
+            const form = document.forms["categoryForm"];
+            const id = form.elements["id"].value;
+            const name = form.elements["name"].value;
+            if (id == 0)
+                createCategory(name);
+        });
 
     getCategories();
 
