--- a/Task_1/TicketReSail/TicketReSail/Views/Category/Index.cshtml
+++ b/Task_1/TicketReSail/TicketReSail/Views/Category/Index.cshtml
@@ -6,11 +6,12 @@
     <div class="row">
         <div class="col-4">
             <div>
+                <div id="error" class="alert alert-danger" style="display:none;"></div>
                 <form name="categoryForm">
-                    <input type="hidden" name="id" value="0" />
+                    <input type="hidden" name="id" value="0"/>
                     <div class="form-group">
-                        <label for="name">Category</label>
-                        <input name="name" class="form-control" />
+                        <label for="name">Category:</label>
+                        <input name="name" class="form-control"/>
                     </div>
                     <div class="form-group">
                         <button type="submit" id="submit" class="btn btn-primary">Create</button>
@@ -22,7 +23,6 @@
             <table class="table">
                 <thead>
                     <tr>
-                        <td></td>
                         <td></td>
                         <td></td>
                     </tr>
@@ -39,12 +39,14 @@
 </div>
 
 <script>
+    const url = "/api/v1/categories";
+    const jsonType = "application/jcon";
 
     async function getCategories() {
-        const response = await fetch("/api/v1/categories",
+        const response = await fetch(url,
             {
                 method: "GET",
-                headers: { "Accept": "application/jcon" }
+                headers: { "Accept": jsonType }
             });
         if (response.ok === true) {
 
@@ -56,27 +58,11 @@
         }
     }
 
-    async function getCategory(id) {
-        const response = await fetch(`/api/v1/categories/${id}`,
-            {
-                method: "GET",
-                headers: { "Accept": "application/json" }
-            });
-        if (response.ok === true) {
-            const category = await response.json();
-            const form = document.forms["categoryForm"];
-            form.elements["id"].value = category.id;
-            form.elements["name"].value = category.name;
-        }
-    }
-
-    // не понимаю, почему после создания категории удалить я ее могу только после обновления страницы
-    // что я пропустил?
     async function createCategory(categoryName) {
-        const response = await fetch("/api/v1/categories",
+        const response = await fetch(url,
             {
                 method: "POST",
-                headers: { "Accept": "application/jcon", "Content-Type": "application/json" },
+                headers: { "Accept": jsonType, "Content-Type": "application/json" },
                 body: JSON.stringify({
                     name: categoryName
                 })
@@ -85,14 +71,32 @@
             const category = await response.json();
             reset();
             document.querySelector("tbody").append(row(category));
+        } else {
+            const errorData = await response.json();
+            console.log("error", errorData);
+            if (errorData) {
+
+                if (errorData.errors) {
+
+                    if (errorData.error["Name"]) {
+                        addError(errorData.errors["Name"]);
+                    }
+                }
+
+                if (errorData["Name"]) {
+                    addError(errorData["Name"]);
+                }
+            }
+
+            document.getElementById("error").style.display = "block";
         }
     }
 
     async function deleteCategory(id) {
-        const response = await fetch(`/api/v1/categories/${id}`,
+        const response = await fetch(url + "/" + id,
             {
                 method: "DELETE",
-                headers: { "Accept": "application/jcon" }
+                headers: { "Accept": jsonType }
             });
         if (response.ok === true) {
             const category = await response.json();
@@ -106,6 +110,13 @@
         form.elements["id"].value = 0;
     }
 
+    function addError(errors) {
+        errors.forEach(error => {
+            const p = document.createElement("p");
+            p.append(error);
+            document.getElementById("error").append(p);
+        });
+    }
 
     function row(category) {
         const tr = document.createElement("tr");
@@ -138,6 +149,9 @@
     document.forms["categoryForm"].addEventListener("submit",
         e => {
             e.preventDefault();
+            document.getElementById("error").innerHTML = "";
+            document.getElementById("error").style.display = "none";
+
             const form = document.forms["categoryForm"];
             const id = form.elements["id"].value;
             const name = form.elements["name"].value;
