--- a/Task_1/TicketReSail/TicketReSail/Views/Venue/Index.cshtml
+++ b/Task_1/TicketReSail/TicketReSail/Views/Venue/Index.cshtml
@@ -20,7 +20,7 @@
                     </div>
                     <div>
                         <label for="cityId">City:</label>
-                        <select id="cities" name="cities" class="form-control">
+                        <select id="cities" name="cities" class="form-control" onchange=singleSelectChangeValue()>
                             <option disabled selected>Choose city</option>
                         </select>
                     </div>
