--- a/Task_1/TicketReSail/TicketReSail/Views/Shared/_Layout.cshtml
+++ b/Task_1/TicketReSail/TicketReSail/Views/Shared/_Layout.cshtml
@@ -7,8 +7,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"]</title>
-    <script src="dist/site.entry.js" type="module" defer></script>
-    <link rel="stylesheet" href="dist/site.css" />
+    <script src="~/dist/site.entry.js" type="module" defer></script>
+    <link rel="stylesheet" href="~/dist/site.css" />
 </head>
 
 <body>
@@ -33,10 +33,10 @@
                         </li>
                     </ul>
                 </div>
-                <form class="form-inline my-2 my-lg-0">
+                @*<form class="form-inline my-2 my-lg-0">
                         <input class="form-control mr-sm-2" type="search" placeholder="Search">
                         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
+                </form>*@
                 <div>&nbsp;</div>
                 <partial name="_LoginPartial" />
             </div>
