--- a/Task_1/TicketReSail/TicketReSail/Views/Venue/Index.cshtml
+++ b/Task_1/TicketReSail/TicketReSail/Views/Venue/Index.cshtml
@@ -18,9 +18,9 @@
                         <label for="address">Address:</label>
                         <input name="address" class="form-control" />
                     </div>
-                    <div>
+                    <div class="form-group">
                         <label for="cityId">City:</label>
-                        <select id="cities" name="cities" class="form-control" onchange=singleSelectChangeValue()>
+                        <select id="cities" name="cities" class="form-control">
                             <option disabled selected>Choose city</option>
                         </select>
                     </div>
@@ -49,3 +49,4 @@
 </div>
 
 <script type="text/javascript" src="dist/venue.entry.js"></script>
+<script type="text/javascript" src="dist/city.entry.js"></script>
