--- a/Task_1/TicketReSail/TicketReSail/Views/Admin/Index.cshtml
+++ b/Task_1/TicketReSail/TicketReSail/Views/Admin/Index.cshtml
@@ -14,7 +14,7 @@
                 <div class="btn btn-outline-primary">@Html.ActionLink("Create venue", "Index", "Venue")</div>
             </div>
             <div class="text-center">
-                <div class="btn btn-outline-primary">@Html.ActionLink("Create event", "Index", "Event")</div>
+                <div class="btn btn-outline-primary">@Html.ActionLink("Create event", "CreateEvent", "Event")</div>
             </div>
         </div>
     </div>
