--- a/Task_1/TicketReSail/TicketReSail/Views/Event/Index.cshtml
+++ b/Task_1/TicketReSail/TicketReSail/Views/Event/Index.cshtml
@@ -1,47 +1,70 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization
-@using TicketReSail.Core.Interface
 @inject IViewLocalizer Localizer
-@inject IVenueService Venue
-
 @model EventsViewModel
+
 @{ ViewData["Title"] = Localizer["Events"]; }
-
-<a asp-action="CreateEvent">Create event</a>
-
-<form class="form-inline">
-    <label>@Localizer["Enter category"]:&nbsp;</label>
-    <link rel="stylesheet" href="~/css/Style.css" />
-    <select name="categoryId" class="form-control">
-        @foreach (var category in Model.Categories)
-        {
-            <option value="@category.Id">@Localizer[@category.Name]</option>
-        }
-    </select>
-    <label>&nbsp;</label>
-    <input type="submit" value="@Localizer["Send"]" />
-</form>
 
 <div class="container">
     <div class="row">
-        @foreach (var events in Model.Events)
-        {
-            <div class="pt-5">
-                <div class="col">
-                    <div class="card text-center">
-                        <img src="@Url.Action("GetImage", new {id = events.Id})" width="235" height="300" alt="@events.Name" />
-                        <div class="card-body">
-                            <strong>
-                                @Html.ActionLink(@events.Name, "Details", "Event",
-                                         new { id = events.Id }, new { @class = "styleNameEvent" })
-                            </strong>
-                            <br><h8>@Localizer["The date of the"]: @events.Date.ToString("dd.MM.yyyy")</h8>
-                            <br><h8>@Localizer["City"]: @Venue.GetCityNameByVenueId(events.VenueId)</h8>
-                            <br><h8>@Localizer["Venue"]: @Venue.GetVenueAddressByVenueId(events.VenueId)</h8>
-                        </div>
+        <div class="col-3">
+            <div>
+                <div id="error" class="alert alert-danger" style="display:none;"></div>
+                <div>
+                    <input id="autocomplete" class="form-control" placeholder="Search">
+                    <div>
+                        <h2>Filter</h2>
                     </div>
+                    <label asp-for="Categories">Category:</label>
+                    <select id="categories" name="categories" multiple class="selectpicker">
+                        <option></option>
+                    </select>
+                </div>
+                <div>
+                    <label asp-for="Cities">City:</label>
+                    <select id="cities" name="cities" multiple class="selectpicker">
+                        <option></option>
+                    </select>
+                </div>
+                <div>
+                    <label asp-for="Venues">Venue:</label>
+                    <select id="venues" name="venues" multiple class="selectpicker">
+                        <option disabled selected>Choose venue</option>
+                    </select>
+                </div>
+                <div>
+                    <label asp-for="FromDateTime">From date:</label>
+                    @Html.TextBoxFor(e => e.FromDateTime, new { type = "date", id = "fromDateTime", @class = "form-control d-inline" })
+                </div>
+                <div>
+                    <label asp-for="ToDateTime">To date:</label>
+                    @Html.TextBoxFor(e => e.FromDateTime, new { type = "date", id = "toDateTime", @class = "form-control d-inline" })
+                </div>
+                <div>
+                    <label class="control-label">Sort:</label>
+                    @Html.DropDownList("sortOrder", Model.SortOrder, new { id = "sortOrder", @class = "form-control" })
+                </div>
+                <div>
+                    <label class="control-label">Sort:</label>
+                    @Html.DropDownList("sortBy", Model.SortBy, new { id = "sortBy", @class = "form-control" })
                 </div>
             </div>
-
-        }
+        </div>
+        <div class="col-9">
+            <div id="events" class="row row-cols-3"></div>
+            <nav>
+                <ul class="pagination justify-content-center"></ul>
+            </nav>
+        </div>
     </div>
 </div>
+
+@section Scripts
+{
+    <script src="dist/event.entry.js" type="module" defer></script>
+    <script src="dist/venue.entry.js" type="module" defer></script>
+    <script src="dist/category.entry.js" type="module" defer></script>
+    <script src="dist/city.entry.js" type="module" defer></script>
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
+    <script src="//code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+}
