--- a/Task_1/TicketReSail/TicketReSail/Views/Event/Index.cshtml
+++ b/Task_1/TicketReSail/TicketReSail/Views/Event/Index.cshtml
@@ -10,26 +10,19 @@
             <div>
                 <div id="error" class="alert alert-danger" style="display:none;"></div>
                 <div>
-                    <input id="autocomplete" class="form-control" placeholder="Search">
                     <div>
                         <h2>Filter</h2>
                     </div>
                     <label asp-for="Categories">Category:</label>
-                    <select id="categories" name="categories" multiple class="selectpicker">
-                        <option></option>
-                    </select>
+                    <select id="categories" name="categories" multiple class="selectpicker"></select>
                 </div>
                 <div>
                     <label asp-for="Cities">City:</label>
-                    <select id="cities" name="cities" multiple class="selectpicker">
-                        <option></option>
-                    </select>
+                    <select id="cities" name="cities" multiple class="selectpicker"></select>
                 </div>
                 <div>
                     <label asp-for="Venues">Venue:</label>
-                    <select id="venues" name="venues" multiple class="selectpicker">
-                        <option disabled selected>Choose venue</option>
-                    </select>
+                    <select id="venues" name="venues" multiple class="selectpicker"></select>
                 </div>
                 <div>
                     <label asp-for="FromDateTime">From date:</label>
@@ -44,8 +37,12 @@
                     @Html.DropDownList("sortOrder", Model.SortOrder, new { id = "sortOrder", @class = "form-control" })
                 </div>
                 <div>
-                    <label class="control-label">Sort:</label>
+                    <label class="control-label">Sort by:</label>
                     @Html.DropDownList("sortBy", Model.SortBy, new { id = "sortBy", @class = "form-control" })
+                </div>
+                <div>
+                    <label asp-for="Name">Search</label>
+                    <input id="postTitle" name="eventName" type="search" class="form-control" placeholder="Enter event name...">
                 </div>
             </div>
         </div>
@@ -58,13 +55,17 @@
     </div>
 </div>
 
-@section Scripts
-{
-    <script src="dist/event.entry.js" type="module" defer></script>
-    <script src="dist/venue.entry.js" type="module" defer></script>
-    <script src="dist/category.entry.js" type="module" defer></script>
-    <script src="dist/city.entry.js" type="module" defer></script>
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
-    <script src="//code.jquery.com/jquery-1.12.4.js"></script>
-    <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+@section Scripts {
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $("#postTitle").autocomplete({
+                source: 'api/v1/events/search',
+                minLength: 2,
+                maxItemsToShow: 10
+            });
+        });
+    </script>
 }
+<script src="dist/event.entry.js" type="module" defer></script>
